# Jam

./: .gitignore  CMakeLists.txt  README.md  build.py
Config/: Configure.cmake
Extras/BuildTools/ResourceCompiler/: Main.cpp
Libraries/Intern/Equation/: Statement.cpp  Statement.h  StmtParser.cpp  StmtParser.h  StmtScanner.cpp  Symbol.cpp
Libraries/Intern/Math/: Axis.cpp  Axis.h  Box.h  Real.h  RectF.h  Screen.cpp  Screen.h  Slice.h  Vec2F.h
Libraries/Intern/Utils/: ArrayBase.h  Char.cpp  StreamMethods.h  String.cpp  String.h
Libraries/Intern/Xml/: File.cpp  File.h  Node.cpp  Node.h
Source/: CMakeLists.txt  Editor.cpp  Editor.h
Source/Interface/: Application.Dialogs.inl  Application.Events.inl  Application.Menu.inl  Application.Project.inl  Application.Settings.inl  Application.cpp  Application.h  Constants.h  Extensions.cpp  Extensions.h  MainArea.Creator.inl  MainArea.cpp  MainArea.h  PersistentSettings.h  RememberLastCache.cpp  RememberLastCache.h
Source/Interface/Area/: Area.cpp  Area.h  AreaBinaryLayout.cpp  AreaBinaryLayout.h  AreaBinaryLayoutPrivate.cpp  AreaBranch.cpp  AreaContent.cpp  AreaContextSwitch.cpp  AreaContextSwitch.h  (+16 more)
Source/State/: App.cpp  App.h  FrameStackManager.cpp  FrameStackManager.h  OutputLogMonitor.cpp  ProjectManager.cpp  ProjectManager.h  ProjectTags.h
Source/Tests/: AreaTest.cpp  AreaTest.h  CMakeLists.txt  MainAreaTest.cpp  WidgetTests.cpp  WidgetTests.h
Source/Utils/: StringConverter.cpp  StringConverter.h  XmlConverter.cpp  XmlConverter.h
Testing/: CMakeLists.txt  Expr.cpp  ExprData.inl  Slice.cpp  XML.cpp
(+116 files in other folders)
